--- a/index.html
+++ b/index.html
@@ -466,7 +466,15 @@
         <div class="modal-content">
           <button class="close-btn" aria-label="Close modal" onclick="wccloseModal()">×</button>
           <h2>What's Changed</h2>
-          <p>New animations, design tweaks, and more!</p>
+          <p>
+            Added 40+ recipes returned per search for more variety<br><br>
+            Redesigned user interface for improved usability and modern look<br><br>
+            Supports searching with multiple ingredients simultaneously<br><br>
+            Faster and more accurate recipe matching for better results<br><br>
+            Built with collaboration and care to enhance your cooking experience<br><br>
+            <strong>Recipe Finder V2 — A project by Naxxex, designed together with users</strong>
+          </p>
+          
         </div>
       </div>
       <div class="results-container" id="resultsContainer">
